# career-pollinate-assessment

./: .gitignore  APPROVAL_GATE_SETUP.md  CERTIFICATE_SETUP.md  CLAUDE.md  FIX_STORAGE_PERMISSIONS.md  INSTALL_TERRAFORM_EXTENSION.md  INTERVIEW_PREP.md  PIPELINE_MONITORING.md  PIPELINE_RUN_GUIDE.md  QUICK_REFERENCE.md  README.md  TEST_BUILDX.md  TEST_STATUS.md  Taskfile.yml  interview-questions.md  taskfile-guide.md
app/: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  TEST_BUILDX.txt  build-multiarch.sh  docker-compose.yml  pyproject.toml
app/src/: __init__.py  main.py
app/src/api/v1/: __init__.py  routes.py
app/src/core/: __init__.py  config.py  logging.py  middleware.py  secrets.py
app/src/models/: __init__.py  schemas.py  validation.py
app/src/services/: __init__.py  riskshield.py  riskshield_client.py
app/tests/: conftest.py
app/tests/integration/: test_api.py
app/tests/unit/: test_config.py  test_models.py
documentation/: ASSESSMENT_COMPLIANCE_REPORT.md  CONTAINER_TEST_RESULTS.md  DEPLOYMENT_LOG.md  DOCKER_BUILD_TEST.md  FIXES_SUMMARY.md  INFRASTRUCTURE_QUICK_REFERENCE.md  TERRAFORM_IMPLEMENTATION.md  TERRAFORM_IMPROVEMENTS.md  azure-tenant-info.md  code-review-fastapi.md  technical-assessment.md
documentation/adr/: 002-python-runtime.md  003-managed-identity-security.md  005-docker-container-strategy.md  006-terraform-module-architecture.md  008-bonus-security-enhancements.md  README.md
documentation/api/: API_SPECIFICATION.md  DEVELOPER_GUIDE.md
documentation/architecture/: ARCHITECTURE_SUMMARY.md  DECISION_LOG.md  README.md  architecture-diagram.md  solution-architecture.md
documentation/architecture/adr/: 001-azure-container-apps.md  002-python-runtime.md  003-managed-identity-security.md  004-python-version-analysis.md  007-cicd-pipeline-strategy.md  README.md
documentation/archive/: DEPLOYMENT_SUMMARY.md  README.md
documentation/guides/: custom-domain-certificate-setup.md  custom-domain-step-by-step.md  custom-domain.md
documentation/runbooks/: OPERATIONS_RUNBOOK.md
documentation/sbom/: applicant-validator FinRisk-App-CI-CD-20260216-1636.1.spdx.xlsx  applicant-validator v0.1.0-17-ga1d7e53.spdx.json
pipelines/: DRY_RUN_RESULTS.md  HOW-IT-WORKS.md  README-APP-API.md  README-IAC-TF.md  README.md  TROUBLESHOOTING.md  azure-pipelines-app.yml  azure-pipelines-infra-script.yml  azure-pipelines-infra.yml  test-infra-pipeline.sh
scripts/: README.md  bootstrap-terraform-state.sh  deploy-with-certificate.sh  upload-certificate.sh
terraform/: .gitignore  .terraform.lock.hcl  .tflint.hcl  BOOTSTRAP.md  README.md  TESTING.md  providers.tf  versions.tf
terraform/devops/: backend.hcl.example  main.tf  outputs.tf  setup.sh  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/dev/: .terraform.lock.hcl  DNS_CONFIGURATION.md  Makefile  PIPELINE_RUN.md  README.md  Taskfile.yml  backend.hcl.example  backend.tf  main.tf  outputs.tf  providers-setup.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/prod/: README.md  backend.hcl.example  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/azure-devops/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/container-app/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/container-registry/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/key-vault/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/networking/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/observability/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/private-endpoints/: main.tf  (+4 more)
terraform/scripts/: README.md  preflight-check.sh  setup-custom-certificate.sh
terraform/tests/: README.md  container_app_test.go  container_registry_test.go  go.mod  key_vault_test.go  observability_test.go  resource_group_test.go  run-tests.sh
(+15 files in other folders)
